syntax = "proto3";

package finances.category;

import "google/protobuf/empty.proto";
import "subcategory/subcategory.proto";

service CategoryService {
  rpc Create(CreateCategory) returns (stream Category) {}
  rpc CreateMany(CreateCategories) returns (stream Status) {}
  rpc FindOne(CategoryId) returns (stream Category) {}
  rpc FindAll(google.protobuf.Empty) returns (stream Categories) {}
  rpc Update(UpdateCategory) returns (stream Category) {}
  rpc Remove(CategoryId) returns (stream Status) {}
  rpc RemoveAll(google.protobuf.Empty) returns (stream Status) {}
}

message Category {
  int32 id = 1;
  string name = 2;
  string icon = 3;
  string color = 4;
  repeated Subcategory subcategories = 5;
}

message CreateCategory {
  string name = 1;
  string icon = 2;
  string color = 3;
  repeated CreateSubcategory subcategories = 4;
}

message CreateCategories {
  repeated Category data = 1;
}

message UpdateCategory {
  int32 id = 1;
  optional string name = 2;
  optional string icon = 3;
  optional string color = 4;
}

message CategoryId {
  int32 id = 1;
}

message Categories {
  repeated Category data = 1;
}

message Status {
  bool status = 1;
}
